@@ -1,3 +1,15 @@
+Tue Apr 24 17:55:24 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed command queue enabling after connecting to server.
+	  The comparisons was from after changing to silc_utf8_strcasecmp.
+	  Affected file is apps/irssi/src/silc/core/silc-servers.c.
+
+Mon Apr 23 17:20:01 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Do not call TCP network listener callback with any error
+	  status, as documented.  Affected file is
+	  lib/silcutil/unix/silcunixnet.c.
+
 Sun Apr 22 21:13:28 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Preliminary SILC Server 1.1 changes committed to apps/silcd/.
@@ -19,8 +31,6 @@ Sun Apr 22 21:13:28 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added silc_net_get_error_string, silc_net_listener_get_ip and
 	  silc_net_listener_get_hostname to lib/silcutil/silcnet.[ch].
-
-	*
 
 Tue Apr 10 15:55:42 CEST 2007  Jochen Eisinger <coffee@silcnet.org>
 
